# NFC-Reader

./: .gitignore
bins/: 59 - NFC-Reader.hex  60 - NFC-Reader.hex  61 - NFC-Reader.hex  62 - NFC-Reader.hex  63 - NFC-Reader.hex  64 - NFC-Reader.hex  65 - NFC-Reader.hex  66 - NFC-Reader.hex  67 - NFC-Reader.hex  68 - NFC-Reader.hex  69 - NFC-Reader.hex  70 - NFC-Reader.hex  71 - NFC-Reader.hex  72 - NFC-Reader.hex  73 - NFC-Reader.hex  74 - NFC-Reader.hex  75 - NFC-Reader.hex  76 - NFC-Reader.hex  77 - NFC-Reader.hex  78 - NFC-Reader — копия.hex  79 - NFC-Reader.hex  80 - NFC-Reader.hex  81 - NFC-Reader.hex  82 - NFC-Reader.hex  83 - NFC-Reader.hex  84 - NFC-Reader.hex  85 - NFC-Reader.hex  85.1 - NFC-Reader.hex  86 - NFC-Reader-цвета.hex  86.1 - NFC-Reader-цвета.hex
doc/: Hardware.txt  NFC-Reader Описание.docx  PWM.txt  План.txt  Тест_памяти.txt
doc/TЗ/: ~$READER.docx
doc/links/: flash.txt
doc/Распиновка/: .mxproject  Распиновка.ioc
doc/Распиновка/Core/Inc/: main.h  stm32f1xx_it.h
doc/Распиновка/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
doc/Распиновка/MDK-ARM/: Распиновка.uvprojx
sources/: CMakeLists.txt  NFC.uvmpw.uvgui.Sasha
sources/Device/: CMakeLists.txt  Device.uvguix.Sasha  Device.uvoptx  Device.uvprojx
sources/Device/src/: Device.cpp  Processor.cpp  Processor.h  defines.cpp  defines.h  main.cpp
sources/Device/src/Hardware/: ADC.cpp  ADC.h  Beeper.cpp  Beeper.h  BeeperOLD.cpp  BeeperOLD.h  Power.cpp  Power.h  Timer.cpp  Timer.h
sources/Device/src/Modules/: ADC.cpp  ADC.h  Barrier.cpp  Barrier.h
sources/Sample/: CMakeLists.txt  Card.cpp  CardUid.h  hrd_SPI.cpp  hrd_SPI.h  iso14443p3.cpp  iso14443p3.h  iso14443p4.cpp  iso14443p4.h
sources/Sample/CLRC663/: hrd_CLRC663.cpp  hrd_CLRC663.h
sources/Sample/CR95LF/: hrd_CR95LF.cpp  hrd_CR95LF.h
sources/Sample/Drv/Spi/: SpiAbstractBus.h  SpiLpcBus.h
sources/Sample/Empty/Hardware/: CardAnalogInterface.h
sources/Sample/Empty/Main/: Utils.h
sources/Sample/Empty/scmRTOS/Common/: scmRTOS.h
sources/Sample/Hardware/: CardAnalogInterface.h  hrd_Globals.h
sources/Sample/scmRTOS/Common/: scmRTOS.h
sources/common/_VS_KEIL/std_includes/: cstdio  (+1 more)
(+466 files in other folders)
